responsive on mobile menu stays on top and preview is below for screen display of 576px and below otherwise menu and preview is side by side for issue numbers [1520 1521]

--- a/public/css/mini-template.css
+++ b/public/css/mini-template.css
@@ -114,3 +114,13 @@
 #custom-body-mini-template .tox-form .accordion .fa-arrow-circle-right {
     top: 0.25rem !important;
 }
+@media (max-width: 576px) {
+    #mini-template-buttons {
+        max-height: 225px;
+        float: none;
+        width: auto;
+    }
+    #custom-body-mini-template .tox-form__group--stretched {
+        max-height: 314px;
+    }
+}
